lib/libremidi-5.4.3/tests/corpus/Invalid/No Header Chunk/Fortuna.mid
vti_encoding:SR|utf8-nl
vti_author:SR|Thomas
vti_timecreated:TR|30 Jul 1998 14:48:45 +0200
vti_syncwith_windows\:80/geocities:TR|30 Jul 1998 14:04:55 +0200
vti_modifiedby:SR|Thomas
vti_backlinkinfo:VX|mitologia.htm
vti_nexttolasttimemodified:TR|30 Jul 1998 14:04:55 +0200
vti_extenderversion:SR|3.0.2.926
vti_timelastmodified:TR|30 Jul 1998 14:04:55 +0200
